fix: change align-items for header menu

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 .list {
